<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>pl.pw.edu.po.search_engine</groupId>
    <artifactId>search-engine-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Search Engine - Parent</name>
    <description>Multi-module project: Backend API + Vaadin Frontend</description>

    <modules>
        <module>backend</module>
        <module>frontend</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>
